# rust-example-1

./: .env  Cargo.toml  Readme.md  diesel.toml  karate-config.js
api/: Cargo.toml
api/src/: lib.rs  post_controller.rs  server.rs
atomic_counter/: Cargo.toml
command/: Cargo.toml
command/src/: create_post_command.rs  dummy_command.rs  lib.rs
crates/atomic_counter/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: dependencies.rs  lib.rs  post.rs
crates/simple_counter/: Cargo.toml
crates/simple_counter/src/: lib.rs
db/: .env  Cargo.toml  sqlx-data.json
db/migrations/: 20210204211322_table_posts.sql  20210204211327_table_users.sql
db/src/: lib.rs
db_diesel/: Cargo.toml
db_diesel/src/: diesel_post_db.rs  lib.rs  pg_connection_factory.rs
domain/src/: dependencies.rs  post.rs
features/: posts.feature
main/: Cargo.toml
main/src/: configuration.rs  main.rs  service_registry.rs
main/src/adapters/: atomic_counter_adapter.rs  logger.rs  mod.rs  post_db.rs  simple_counter_adapter.rs
main/src/api_warp/: server.rs
main/src/commands/: dummy_command.rs  mod.rs
migrations/2021-01-23-171111_table_posts/: down.sql  up.sql
migrations/2021-01-23-171258_table_users/: down.sql  up.sql
println_logger/: Cargo.toml
println_logger/src/: lib.rs
src/: adapters.rs  application.rs  atomic_counter.rs  db.rs  diesel_post_db.rs  main.rs  post_controller.rs  posts_dao.rs  println_logger.rs  schema.rs  server.rs  service_registry.rs  simple_counter.rs  uppercaser.rs  util.rs  utils.rs
src/adapters/: async_post_db.rs  atomic_counter_adapter.rs  logger.rs  mod.rs  post_db.rs  simple_counter_adapter.rs  uppercaser_adapter.rs
src/api_warp/: mod.rs  post_controller.rs  server.rs
src/commands/: dummy_command.rs
src/db_diesel/: diesel_post_db.rs  mod.rs  pg_connection_factory.rs
src/domain/: dependencies.rs  mod.rs  post.rs
uppercaser/: Cargo.toml
uppercaser/src/: lib.rs
