[package]
name = "command"
version = "0.1.0"
authors = ["Cy Brown <cy.brown59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.42"
mockall = "0.9.0"
