[package]
name = "db"
version = "0.1.0"
authors = ["Cy Brown <cy.brown59@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { git = "https://github.com/launchbadge/sqlx", features = [ "runtime-tokio-rustls", "postgres", "macros", "offline" ] }
domain = { path = "../domain" }
async-trait = "0.1.42"